Casual changes in portfolio

--- a/Personal/about.html
+++ b/Personal/about.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/lo.jpg" rel="icon">
+  <link href="assets/img/lo-removebg-preview.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -55,6 +55,15 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="photography.html">Photography</a></li>
+              <li><a href="edits.html">Video Editing</a></li>
+              <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="https://meowtify.live/" target="_blank">Notify</a></li>
+                  <li><a href="https://ecosnap.meowtify.live/" target="_blank">Ecosnap</a></li>
+                  <li><a href="creativeHubRec-details.html">Club Website</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -93,7 +102,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/IMG_20250805_214912.jpg" class="img-fluid" alt="">
+            <img src="assets/img/WhatsApp Image 2025-08-06 at 15.39.45_3b510090.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
@@ -234,7 +243,7 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="features-item">
               <i class="bi bi-phone" style="color: #e361ff;"></i>
-              <h3><a href="" class="stretched-link">App Development</a></h3>
+              <h3><a href="https://meowtify.live/" target="_blank" class="stretched-link">App Development</a></h3>
             </div>
           </div><!-- End Feature Item -->
 
@@ -248,7 +257,7 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="600">
             <div class="features-item">
               <i class="bi bi-camera" style="color: #ffa76e;"></i>
-              <h3><a href="" class="stretched-link">Photography</a></h3>
+              <h3><a href="photography.html" target="_blank" class="stretched-link">Photography</a></h3>
             </div>
           </div><!-- End Feature Item -->
 
@@ -269,7 +278,7 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="900">
             <div class="features-item">
               <i class="bi bi-pencil" style="color: #e80368;"></i>
-              <h3><a href="" class="stretched-link">Video Editing</a></h3>
+              <h3><a href="edits.html" target="_blank" class="stretched-link">Video Editing</a></h3>
             </div>
           </div>
 
