--- a/Personal/creativeHubRec-details.html
+++ b/Personal/creativeHubRec-details.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/lo.jpg" rel="icon">
+  <link href="assets/img/lo-removebg-preview.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -54,6 +54,15 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="photography.html">Photography</a></li>
+              <li><a href="edits.html">Video Editing</a></li>
+              <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="https://meowtify.live/" target="_blank">Notify</a></li>
+                  <li><a href="https://ecosnap.meowtify.live/" target="_blank">Ecosnap</a></li>
+                  <li><a href="creativeHubRec-details.html">Club Website</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
