--- a/Personal/index.html
+++ b/Personal/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/lo.png" rel="icon" type="image/x-icon">
-  
+  <link href="assets/img/lo-removebg-preview.png" rel="icon" type="image/x-icon">
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -54,8 +54,29 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+          <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="photography.html">Photography</a></li>
+              <li><a href="edits.html">Video Editing</a></li>
+              <li class="dropdown"><a href="#"><span>Projects</span> <i
+                    class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="https://meowtify.live/" target="_blank">Notify</a></li>
+                  <li><a href="https://ecosnap.meowtify.live/" target="_blank"">Ecosnap</a></li>
+                  <li><a href="creativeHubRec-details.html">Club Website</a></li>
+                  <!-- <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li> -->
+                  <!-- </ul>
+          </li> -->
+
+
+                </ul>
+                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
     </div>
